--- a/build.gradle
+++ b/build.gradle
@@ -15,4 +15,7 @@ repositories{
 dependencies {
     implementation('org.springframework.boot:spring-boot-starter-web')
     testImplementation('org.springframework.boot:spring-boot-starter-test')
+    implementation('org.springframework.boot:spring-boot-starter-data-jpa')
+    implementation('com.h2database:h2')
+    implementation('org.projectlombok:lombok')
 }
